provisioning/200_apps/base/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: op-keycloak-traefik-forward-auth@kubernetescrd
    # ingress.kubernetes.io/auth-type: forward
    # ingress.kubernetes.io/auth-url: http://traefik-forward-auth-svc.keycloak-operator.svc.cluster.local/
    # ingress.kubernetes.io/auth-response-headers: X-Forwarded-User

spec:
  ingressClassName: traefik
  rules:
  - host: << example.com >>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-svc
            port:
              number: 80
  tls:
  - hosts:
    - << example.com >>
    secretName: << example.com >>
